--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,11 @@
 		<version>1.3.2.RELEASE</version>
 	</parent>
 	<dependencies>
+	<dependency>
+    <groupId>javax.persistence</groupId>
+    <artifactId>persistence-api</artifactId>
+    <version>1.0.2</version>
+</dependency>
 		<dependency>
 			<groupId>com.stormpath.spring</groupId>
 			<artifactId>stormpath-default-spring-boot-starter</artifactId>
