--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: java
+notifications:
+  email:
+    - atumohan@umail.iu.edu
+    - anujbhan@umail.iu.edu
 jdk:
   - oraclejdk8
 sudo: false
