--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ notifications:
   email:
     - atumohan@umail.iu.edu
     - anujbhan@umail.iu.edu
+    - arpiagar@iu.edu
 jdk:
   - oraclejdk8
 sudo: false
